--- a/checkout.html
+++ b/checkout.html
@@ -107,6 +107,28 @@
             No
           </label>
         </fieldset>
+        <label>Pickup Location
+          <select name="pickupLocation">
+            <option value="location1">Location 1</option>
+            <option value="location2">Location 2</option>
+            <option value="location3">Location 3</option>
+          </select>
+        </label>
+        <!-- Placeholder - How do I put in calculated html in a form? -->
+        <h3>Dogs Adopted</h3>
+        <div class="checkout-card">
+          <img src="images/duffy-checkout.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
+          <h3>Duffy</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+        </div>
+        <div class="checkout-card">
+          <img src="images/lucas-checkout.jpg" alt="A black dog with bright amber eyes.">
+          <h3>Lucas</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+        </div>
+        <h3>Total Adoption Cost</h3>
+        <p>Placeholder for Calculated Values</p>
+        <input type="submit" value="Submit">
       </form>
     </main>
 
