--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Seattle's premiere dog adoption agency</h1>
       <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
       <p>$1,234.56</p>
-      <button type="button"><a href="checkout.html">Checkout</a></button>
+      <button type="button">Checkout</button>
 
       <nav>
         <ul>
