--- a/index.html
+++ b/index.html
@@ -37,63 +37,63 @@
         <div class="card">
           <img src="images/murphy-card.jpg" alt="A pensive-looking brown and white dog.">
           <h3>Murphy</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
           <h3>Poppy</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
           <h3>Jack</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
           <h3>Duffy</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
           <h3>Lucas</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
           <h3>Jake</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
           <h3>Angus</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
           <h3>Violet</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
           <h3>Stella</h3>
-          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
           <button type="button">Adopt</button>
         </div>
