additional work on layout and styles

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <script src="https://kit.fontawesome.com/eb88b68bb7.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <header class="clearfix">
       <img src="images/adoptadog-logo.svg" alt="A white dog silhouette logo.">
       <h1>Seattle's premiere dog adoption agency</h1>
-      <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
-      <p>$1,234.56</p>
-      <button type="button">Checkout</button>
+      <div id="nav-checkout">
+        <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
+        <p>$1,234.56</p>
+        <button type="button">Checkout</button>
+      </div>
 
       <nav>
         <ul>
