--- a/dogs.html
+++ b/dogs.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>AdoptADog &#124; Dogs</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <script src="https://kit.fontawesome.com/eb88b68bb7.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <header class="clearfix">
       <img src="images/adoptadog-logo.svg" alt="A white dog silhouette logo.">
       <h1>Seattle's premiere dog adoption agency</h1>
-      <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
-      <p>$1,234.56</p>
-      <button type="button">Checkout</button>
+      <div id="nav-checkout">
+        <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
+        <p>$1,234.56</p>
+        <button type="button">Checkout</button>
+      </div>
 
       <nav>
         <ul>
@@ -25,89 +30,91 @@
 
     <main>
       <h2>Here are all of our Dogs!</h2>
-      <div class="card">
-        <img src="images/murphy-card.jpg" alt="A pensive-looking brown and white dog.">
-        <h3>Murphy</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
-        <h3>Poppy</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
-        <h3>Jack</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
-        <h3>Duffy</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
-        <h3>Lucas</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
-        <h3>Jake</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
-        <h3>Angus</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
-        <h3>Violet</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
-        <h3>Stella</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/piper-card.jpg" alt="A brown long-haired hunting breed outside with a happy tongue.">
-        <h3>Piper</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/luna-card.jpg" alt="A very chill-looking cream labrador with a happy smile.">
-        <h3>Luna</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
-      </div>
-      <div class="card">
-        <img src="images/maximus-card.jpg" alt="A brown and tan medium-sized terrier breed looking attentive.">
-        <h3>Maximus</h3>
-        <p><em>Cost to Adopt</em>: $123.45</p>
-        <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-        <button type="button">Adopt</button>
+      <div class="flex-wrapper">
+        <div class="card">
+          <img src="images/murphy-card.jpg" alt="A pensive-looking brown and white dog.">
+          <h3>Murphy</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
+          <h3>Poppy</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
+          <h3>Jack</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
+          <h3>Duffy</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
+          <h3>Lucas</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
+          <h3>Jake</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
+          <h3>Angus</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
+          <h3>Violet</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
+          <h3>Stella</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/piper-card.jpg" alt="A brown long-haired hunting breed outside with a happy tongue.">
+          <h3>Piper</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/luna-card.jpg" alt="A very chill-looking cream labrador with a happy smile.">
+          <h3>Luna</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
+        <div class="card">
+          <img src="images/maximus-card.jpg" alt="A brown and tan medium-sized terrier breed looking attentive.">
+          <h3>Maximus</h3>
+          <p><em>Cost to Adopt</em>: $123.45</p>
+          <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
+          <button type="button">Adopt</button>
+        </div>
       </div>
     </main>
 
