finalized first draft of layout and styles

--- a/checkout.html
+++ b/checkout.html
@@ -40,10 +40,10 @@
         <label>Street Address
           <input type="text" name="streetAddress">
         </label>
-        <label>City
+        <label class="inline-block">City
           <input type="text" name="city">
         </label>
-        <label>State
+        <label class="inline-block">State
           <select name="state">
             <option value="AL">Alabama</option>
           	<option value="AK">Alaska</option>
@@ -98,7 +98,7 @@
           	<option value="WY">Wyoming</option>
           </select>
         </label>
-        <label>Zip Code
+        <label class="inline-block">Zip Code
           <input type="text" name="zipCode">
         </label>
         <fieldset>
