--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-      <div class="intro clearfix">
+      <div class="story clearfix">
         <img src="images/home-intro.jpg" alt="A man in a red shirt hugging a golden retriever.">
         <h2>Adopt A Dog</h2>
         <p>Iduciendisite quo magnatem iuntum quid quaest ea am, tenderumet adis dolenem quidustrum fuga. Faceaquae estioria derum recuptatur, cum volore, undipsa doloreium hillupta aut es ut alitatuscit ommossum haritatur arum qui officae videbiti corporeium faccull oribus es quidignis ipietus explam sus am aut amet ant fugiatum, utem non reptat ad magnienecto volorent fugia nonsedi gendand itatquos as magnimpor aut molor autatia ad est officimus accae et omnia cus, od qui ate</p>
