alert handlers first draft

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-    <script src="https://kit.fontawesome.com/eb88b68bb7.js" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <header class="clearfix">
@@ -37,67 +37,67 @@
 
       <div class="flex-wrapper">
         <div class="card">
-          <img src="images/murphy-card.jpg" alt="A pensive-looking brown and white dog.">
+          <img onclick="dogAlert('Murphy', 'Mix', '$123.45')" src="images/murphy-card.jpg" alt="A pensive-looking brown and white dog.">
           <h3>Murphy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
+          <img onclick="dogAlert('Poppy', 'English', '$123.45')" src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
           <h3>Poppy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
+          <img onclick="dogAlert('Jack', 'Beagle', '$123.45')" src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
           <h3>Jack</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
+          <img onclick="dogAlert('Duffy', 'Mutt', '$123.45')" src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
           <h3>Duffy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
+          <img onclick="dogAlert('Lucas', 'Shepard', '$123.45')" src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
           <h3>Lucas</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
+          <img onclick="dogAlert('Jake', 'Retriever', '$123.45')" src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
           <h3>Jake</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
+          <img onclick="dogAlert('Angus', 'Bull Mix', '$123.45')" src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
           <h3>Angus</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
+          <img onclick="dogAlert('Violet', 'Lab', '$123.45')" src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
           <h3>Violet</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
         <div class="card">
-          <img src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
+          <img onclick="dogAlert('Stella', 'Chihuahua', '$123.45')" src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
           <h3>Stella</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button type="button">Adopt</button>
+          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
         </div>
       </div>
       <button type="button">See More Dogs</button>
