--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-    <script src="https://kit.fontawesome.com/eb88b68bb7.js" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <header class="clearfix">
