additional content on home page

--- a/index.html
+++ b/index.html
@@ -101,6 +101,27 @@
         </div>
       </div>
       <button type="button">See More Dogs</button>
+
+      <div class="sidebar">
+        <div class="story clearfix">
+          <img src="images/blog-1.jpg" alt="A young man in a tan shirt and his medium-sized black dog sit overlooking a canyon.">
+          <h3>Traveling With Your Dog</h3>
+          <p>Iciustiam, et ad quiaes cum que excea sinciendi qui offic temquas doluptios dolupta tiandebis nem ut.</p>
+          <a href="blog.html">Read more >></a>
+        </div>
+        <div class="story clearfix">
+          <img src="images/blog-2.jpg" alt="Several dogs on a single lead sitting attentively on a walk.">
+          <h3>How To Walk Multiple Dogs</h3>
+          <p>Iciustiam, et ad quiaes cum que excea sinciendi qui offic temquas doluptios dolupta tiandebis nem ut.</p>
+          <a href="blog.html">Read more >></a>
+        </div>
+        <div class="story clearfix">
+          <img src="images/blog-3.jpg" alt="A woman and her dog are silhouetted in black with an orange sunset in the background.">
+          <h3>Teach Your Dog To Fetch!</h3>
+          <p>Iciustiam, et ad quiaes cum que excea sinciendi qui offic temquas doluptios dolupta tiandebis nem ut.</p>
+          <a href="blog.html">Read more >></a>
+        </div>
+      </div>
     </main>
 
     <footer>
