second pass media css

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
             <button type="button">Adopt</button>
           </div>
-          <button class="see-more" type="button">See More Dogs</button>
+          <button class="see-more" type="button"><a href="dogs.html">See More Dogs</a></button>
         </div>
       </div>
 
@@ -124,6 +124,7 @@
           <a href="blog.html">Read more >></a>
         </div>
       </div>
+      <button class="mobile" type="button"><a href="blog.html">Dog Blog!</a></button>
     </main>
 
     <footer>
