first attempt at generating blog posts

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
 
-    <main>
+    <main id="blog">
       <h2>Adoptadog Blog</h2>
       <div class="story clearfix">
         <img src="images/blog-1.jpg" alt="A young man in a tan shirt and his medium-sized black dog sit overlooking a canyon.">
