blog complete, first pass at form alerts

--- a/checkout.html
+++ b/checkout.html
@@ -30,7 +30,7 @@
 
     <main>
       <h2>Checkout</h2>
-      <form method="GET">
+      <form id="checkout-form" method="GET">
         <label>Name
           <input type="text" name="name">
         </label>
