added jQuery CDN links

--- a/checkout.html
+++ b/checkout.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
@@ -119,7 +121,7 @@
             <option value="location3">Location 3</option>
           </select>
         </label>
-        
+
         <h3>Dogs Adopted</h3>
         <div class="checkout-card">
           <img src="images/duffy-checkout.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
