refactored form submission logs

--- a/dogs.html
+++ b/dogs.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
@@ -17,7 +16,7 @@
       <h1>Seattle's premiere dog adoption agency</h1>
       <div id="nav-checkout">
         <img src="images/cart-icon.svg" alt="A white shopping cart icon.">
-        <p>$1,234.56</p>
+        <p>$0.00</p>
         <button type="button">Checkout</button>
       </div>
 
@@ -38,84 +37,84 @@
           <h3>Murphy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Poppy', 'English', '$123.45')" src="images/poppy-card.jpg" alt="An off-white small curly-haired dog trotting down a path.">
           <h3>Poppy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Jack', 'Beagle', '$123.45')" src="images/jack-card.jpg" alt="A brown and white beagle puppy sitting.">
           <h3>Jack</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Duffy', 'Mutt', '$123.45')" src="images/duffy-card.jpg" alt="A white-faced tan patchy dog with blue eyes sitting.">
           <h3>Duffy</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Lucas', 'Shepard', '$123.45')" src="images/lucas-card.jpg" alt="A black dog with bright amber eyes.">
           <h3>Lucas</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Jake', 'Retriever', '$123.45')" src="images/jake-card.jpg" alt="A cream labrador with a brown collar sitting on the beach.">
           <h3>Jake</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Angus', 'Bull Mix', '$123.45')" src="images/angus-card.jpg" alt="A small tawny dog with white patches and a bull-dog look.">
           <h3>Angus</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Violet', 'Lab', '$123.45')" src="images/violet-card.jpg" alt="A very young chocolate puppy with blue eyes.">
           <h3>Violet</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Stella', 'Chihuahua', '$123.45')" src="images/stella-card.jpg" alt="An older grey-snouted tan chihuahua laying on a couch.">
           <h3>Stella</h3>
           <p><strong>Cost to Adopt</strong>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Piper', 'Spaniel', '$123.45')" src="images/piper-card.jpg" alt="A brown long-haired hunting breed outside with a happy tongue.">
           <h3>Piper</h3>
           <p><em>Cost to Adopt</em>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Luna', 'Lab', '$123.45')" src="images/luna-card.jpg" alt="A very chill-looking cream labrador with a happy smile.">
           <h3>Luna</h3>
           <p><em>Cost to Adopt</em>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
         <div class="card">
           <img onclick="dogAlert('Maximus', 'Terrier', '$123.45')" src="images/maximus-card.jpg" alt="A brown and tan medium-sized terrier breed looking attentive.">
           <h3>Maximus</h3>
           <p><em>Cost to Adopt</em>: $123.45</p>
           <p>Corrum volorit iandae nimaxim cum restia volor reicid ut et etur sunt arum rendae pla endis re ea erum, qui doluptae</p>
-          <button onclick="cartAdd(123.45)" type="button">Adopt</button>
+          <button type="button">Adopt</button>
         </div>
       </div>
     </main>
